--- a/views/main.ejs
+++ b/views/main.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= title%></title>
 </head>
-<body style='background-color:black'>
+<body>
 <div id='root'></div>
  <script type='text/javascript' src="commons.js"></script>
  <script type='text/javascript' src="<%= jsFile %>"></script>
