Add some caching

--- a/views/mainBlack.ejs
+++ b/views/mainBlack.ejs
@@ -7,7 +7,7 @@
 </head>
 <body style='background:black'>
 <div id='root'></div>
- <script type='text/javascript' src="commons.js"></script>
- <script type='text/javascript' src="<%= jsFile %>"></script>
+ <script type='text/javascript' src="js/commons.js"></script>
+ <script type='text/javascript' src="js/<%= jsFile %>"></script>
 </body>
 </html>
